--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52,6 +52,23 @@ title = {{Effects of Bulk Composition on The Atmospheric Dynamics on Close-in Ex
 url = {http://arxiv.org/abs/1607.04260},
 year = {2016}
 }
+@article{Husser2013,
+abstract = {Aims: We present a new library of high-resolution synthetic spectra based on the stellar atmosphere code PHOENIX that can be used for a wide range of applications of spectral analysis and stellar parameter synthesis. Methods: The spherical mode of PHOENIX was used to create model atmospheres and to derive detailed synthetic stellar spectra from them. We present a new self-consistent way of describing micro-turbulence for our model atmospheres. Results: The synthetic spectra cover the wavelength range from 500 {\AA} to 5.5 $\mu$m with resolutions of R = 500 000 in the optical and near IR, R = 100 000 in the IR and $\Delta$$\lambda$ = 0.1 {\AA} in the UV. The parameter space covers 2300 K ≤ Teff ≤ 12 000 K, 0.0 ≤ log g ≤ +6.0, - 4.0 ≤ [Fe/H] ≤ +1.0, and - 0.2 ≤ [$\alpha$/Fe] ≤ +1.2. The library is a work in progress and we expect to extend it up to Teff = 25 000 K.},
+archivePrefix = {arXiv},
+arxivId = {1303.5632},
+author = {Husser, T.-O. and {Wende-von Berg}, S and Dreizler, S and Homeier, D and Reiners, a and Barman, T. and Hauschildt, Peter H},
+doi = {10.1051/0004-6361/201219058},
+eprint = {1303.5632},
+file = {:home/astro/phrmat/papers/Husser et al. - 2013 - Astrophysics A new extensive library of PHOENIX stellar atmospheres.pdf:pdf},
+issn = {0004-6361},
+journal = {A{\&}A},
+keywords = {atmospheres,convection,late-type,stars},
+pages = {A6},
+title = {{Astrophysics A new extensive library of PHOENIX stellar atmospheres}},
+url = {http://www.aanda.org/10.1051/0004-6361/201219058},
+volume = {553},
+year = {2013}
+}
 @article{Cowan2007,
 abstract = {We present results from Spitzer Space Telescope observations of the mid-infrared phase variations of three short-period extrasolar planetary systems: HD 209458, HD 179949 and 51 Peg. We gathered IRAC images in multiple wavebands at eight phases of each planet's orbit. We find the uncertainty in relative photometry from one epoch to the next to be significantly larger than the photon counting error at 3.6 micron and 4.5 micron. We are able to place 2-sigma upper limits of only 2{\%} on the phase variations at these wavelengths. At 8 micron the epoch-to-epoch systematic uncertainty is comparable to the photon counting noise and we detect a phase function for HD 179949 which is in phase with the planet's orbit and with a relative peak-to-trough amplitude of 0.00141(33). Assuming that HD 179949b has a radius R{\_}J {\textless} R{\_}p {\textless} 1.2R{\_}J, it must recirculate less than 21{\%} of incident stellar energy to its night side at the 1-sigma level (where 50{\%} signifies full recirculation). If the planet has a small Bond albedo, it must have a mass less than 2.4 M{\_}J (1-sigma). We do not detect phase variations for the other two systems but we do place the following 2-sigma upper limits: 0.0007 for 51 Peg, and 0.0015 for HD 209458. Due to its edge-on configuration, the upper limit for HD 209458 translates, with appropriate assumptions about Bond albedo, into a lower limit on the recirculation occuring in the planet's atmosphere. HD 209458b must recirculate at least 32{\%} of incident stellar energy to its night side, at the 1-sigma level, which is consistent with other constraints on recirculation from the depth of secondary eclipse depth at 8 micron and the low optical albedo. These data indicate that different Hot Jupiter planets may experience different recirculation efficiencies.},
 archivePrefix = {arXiv},
